2010-12-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-show-article): Reverse the meanings of `C-u
	C-u g' and `C-u g' so that `C-u g' does what it traditionally did.

	* shr.el (shr-urlify): Show the URL before the title to avoid
	misleading URLs.

2010-12-04  Adam Sjøgren  <asjo@koldfront.dk>

	* shr.el (shr-urlify): Display the title in <a> tags.

2010-12-04  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-categorize): Replace mapcar with mapc.

2010-12-03  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el: Rearrange code to allow macros to be autoloaded by
	gnus-sum.el.
	(nnir-retrieve-headers-override-function): Make this variable
	customizable.
	(nnir-retrieve-headers): Remove obsolete subject-mangling code.

	* gnus-sum.el (nnir-article-group,nnir-article-rsv): Autoload macros
	from nnir.el.

2010-12-03  Julien Danjou  <julien@danjou.info>

	* gnus-demon.el (gnus-demon-init): Fix time computing when time is nil.

2010-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-macroexpand-all): Don't modify argument;
	allow optional argument `environment'.

2010-12-03  Glenn Morris  <rgm@gnu.org>

	* mm-extern.el (message-goto-body): Update declaration.

2010-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-macroexpand-all): New function.

	* gnus-sum.el (gnus-summary-line-format-alist): Use gnus-macroexpand-all
	instead of macroexpand-all that is unavailable in XEmacs.

2010-12-02  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-summary-line-format): New variable.
	(nnir-mode): Use it.
	(nnir-artlist-*,nnir-aritem-*): Reimplement as macros.
	(nnir-article-ids): Reimplement as defsubst.
	(nnir-retrieve-headers): Don't mangle the subject header.
	(nnir-run-imap): Use 100 as RSV score.
	(nnir-run-find-grep): Fix for full server searching.
	(nnir-run-gmane): Better restriction to gmane groups.

	* gnus-sum.el (gnus-summary-line-format-alist): Add specs for nnir
	summary buffers.
